[gd_scene format=3 uid="uid://dor0acrk5dlmx"]

[ext_resource type="Script" uid="uid://dfyh6wrcrq8jt" path="res://scripts/eta.gd" id="1_4gx6k"]
[ext_resource type="Texture2D" uid="uid://bqh2q452hw2jn" path="res://assets/Eta.png" id="2_d52ut"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kmqw5"]
atlas = ExtResource("2_d52ut")
region = Rect2(189, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_d52ut"]
atlas = ExtResource("2_d52ut")
region = Rect2(1, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwcrk"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_3do20"]
atlas = ExtResource("2_d52ut")
region = Rect2(95, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_a617s"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_equak"]
atlas = ExtResource("2_d52ut")
region = Rect2(142, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq6qc"]
atlas = ExtResource("2_d52ut")
region = Rect2(189, 189, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hdq0"]
atlas = ExtResource("2_d52ut")
region = Rect2(189, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5ar3"]
atlas = ExtResource("2_d52ut")
region = Rect2(1, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfxr8"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_yselu"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_20flk"]
atlas = ExtResource("2_d52ut")
region = Rect2(95, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xwii"]
atlas = ExtResource("2_d52ut")
region = Rect2(142, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_263ki"]
atlas = ExtResource("2_d52ut")
region = Rect2(189, 95, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7084"]
atlas = ExtResource("2_d52ut")
region = Rect2(1, 1, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gx6k"]
atlas = ExtResource("2_d52ut")
region = Rect2(189, 1, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_adcri"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 1, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ud5t"]
atlas = ExtResource("2_d52ut")
region = Rect2(95, 1, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_kseyl"]
atlas = ExtResource("2_d52ut")
region = Rect2(142, 1, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sj8h"]
atlas = ExtResource("2_d52ut")
region = Rect2(1, 142, 46, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcbcu"]
atlas = ExtResource("2_d52ut")
region = Rect2(48, 142, 46, 46)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwcrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmqw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d52ut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwcrk")
}],
"loop": false,
"name": &"air_drawback",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3do20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a617s")
}],
"loop": true,
"name": &"air_hold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_equak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq6qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq6qc")
}],
"loop": false,
"name": &"air_shooting",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hdq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5ar3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfxr8")
}],
"loop": false,
"name": &"ground_drawback",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yselu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20flk")
}],
"loop": true,
"name": &"ground_hold",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xwii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_263ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_263ki")
}],
"loop": true,
"name": &"ground_shooting",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7084")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7084")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gx6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gx6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7084")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7084")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adcri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ud5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kseyl")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sj8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcbcu")
}],
"loop": true,
"name": &"jumping",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_4gx6k"]
resource_name = "air_drawback"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"air_drawback"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_d52ut"]
resource_name = "air_hold"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"air_hold"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_r7084"]
resource_name = "air_shooting"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"air_shooting"],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_kseyl"]
resource_name = "ground_drawback"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d52ut"]
_data = {
&"air_drawback": SubResource("Animation_4gx6k"),
&"air_hold": SubResource("Animation_d52ut"),
&"air_shooting": SubResource("Animation_r7084"),
&"ground_drawback": SubResource("Animation_kseyl")
}

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_4gx6k"]
blend_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gx6k"]
size = Vector2(12, 19)

[node name="Eta" type="CharacterBody2D" unique_id=322721546 groups=["player"]]
collision_layer = 2
collision_mask = 29
script = ExtResource("1_4gx6k")

[node name="Sprites" type="AnimatedSprite2D" parent="." unique_id=584076674]
sprite_frames = SubResource("SpriteFrames_kwcrk")
animation = &"walking"

[node name="SpriteAnimation" type="AnimationPlayer" parent="Sprites" unique_id=1848983463]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_d52ut")

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=810900902]
root_node = NodePath("../Sprites/SpriteAnimation")
tree_root = SubResource("AnimationNodeBlendSpace2D_4gx6k")
parameters/blend_position = Vector2(-0.0015949011, 0.8021978)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1258458516]
visible = false
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_4gx6k")
debug_color = Color(2.695322e-06, 0.6361956, 0.41181436, 0.41960785)

[node name="PlayerCamera" type="Camera2D" parent="." unique_id=1537924317]

[node name="CoyoteTime" type="Timer" parent="." unique_id=1240123222]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="." unique_id=867116984]
wait_time = 0.1
one_shot = true

[node name="DashTimer" type="Timer" parent="." unique_id=1437706081]
wait_time = 0.25
one_shot = true

[node name="DashCooldown" type="Timer" parent="." unique_id=1273560038]
wait_time = 0.5
one_shot = true

[node name="WallCoyoteTime" type="Timer" parent="." unique_id=2037125850]
wait_time = 0.1
one_shot = true

[node name="AttackCooldown" type="Timer" parent="." unique_id=2018439741]
wait_time = 0.45
one_shot = true

[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="WallCoyoteTime" to="." method="_on_wall_coyote_time_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
